css/styles.css
/* General */

@font-face {
  font-family: Bariol;
  font-weight: 300;
  src: url(../fonts/bariol_light-webfont.woff2);
}

@font-face {
  font-family: Bariol;
  font-weight: 400;
  src: url(../fonts/bariol_regular-webfont.woff2);
}

@font-face {
  font-family: Bariol;
  font-weight: 600;
  src: url(../fonts/bariol_bold-webfont.woff2);
}

body {
  text-rendering: optimizeLegibility;
  font-family: Bariol, Arial, sans-serif;
  font-size: 16px;
  line-height: 1.4;
}

* {
  box-sizing: border-box;
}

/* Header */

.top-header {
  background-color: hsl(267, 100%, 26%);
  position: fixed;
  z-index: 100;
  width: 100%;
  height: 115px;
}

.top-nav {
  padding: 39px 20px 0;
  display: flex;
  justify-content: space-between;
  max-width: 1180px;
  margin: auto;
}

.donutlogo {
  height: 55px;
}

.nav-menu ul li {
  display: inline-block;
  font-size: .875rem;
  letter-spacing: .5px;
  margin-left: 15px;
}

.nav-menu ul li a {
  color: hsla(0, 0%, 100%, .75);
  text-decoration: none;
  transition: color .3s;
}

.nav-menu ul li a:hover {
  color: hsl(0, 0%, 100%);
}

.nav-menu ul li a.sign-in {
  padding: 10px 20px;
  font-weight: 600;
  background-color: hsla(0, 0%, 100%, .15);
  border-radius: 5px;
  color: hsl(0, 0%, 100%);
  transition: background-color .3s;
}

.nav-menu ul li a.sign-in:hover {
  background-color: hsla(0, 0%, 100%, .25);
}

/* Description/ */

.description-section {
  background-color: hsl(267, 100%, 26%);
  position: relative;
  height: 780px;
  padding-top: 122px;
  overflow: hidden;
}

.description-part1 {
  padding: 0 20px;
  margin: auto;
  max-width: 1180px;
}

.description-section-leftside {
  max-width: 600px;
  color: hsl(0, 0%, 100%);
}

.howbig {
  font-size: 5rem;
  font-weight: 300;
  margin-top: 59px;
  line-height: 1.15;
}

.slack-button {
  margin-top: -40px;
  width: 215px;
}

.blond-girl {
  position: absolute;
  bottom: 0;
  left: 50%;
}

/* Logos */

.logo {
  padding: 60px 0;
  background: rgb(239, 241, 243);
}

.logo-container {
	width: 100%;
  max-width: 1180px;
  padding-left: 20px;
  padding-right: 20px;
  margin: 0 auto;
}

.logo-list {
  display: flex;
  flex-wrap: wrap;
  -webkit-box-align: center;
  align-items: center;
}

.logo-item {
	width: 25%;
	text-align: center;
	padding: 20px 40px;
}

img.logo-image {
	height: auto;
  max-width: 100%;
  vertical-align: top;
}

/* Features */

.feature-images {
  margin: 38px auto 0;
  max-width: 1180px;
  overflow: hidden;
}

.feature-images img {
  max-width: 45%;
  position: relative;
  z-index: -1;
  top: 21px;
}

.pairing-image {
  margin-left: -32px;
}

.onboarding-image {
  float: right;
  margin-right: -32px;
}

.feature-descriptions h3 {
  font-size: 3.75rem;
  line-height: 1.1;
  font-weight: 300;
  color: hsl(265, 100%, 27%);
  margin-bottom: -17px;
  margin-top: 5px;
}

.feature-paragraph {
  color: hsl(265, 100%, 27%);
  font-size: 1.875rem;
  font-weight: 300;
  line-height: 1.2;
}

.pairing-description,
.onboarding-description {
  background-color: hsl(210, 14%, 95%);
  border-radius: 10px;
  margin: 20px;
  padding: 20px;
}

.pairing-link {
  font-size: 1.5rem;
  font-weight: 600;
  transition: color .3s;
  color: hsl(256, 100%, 66%);
  text-decoration: none;
}

.pairing-link:hover {
  color: hsl(265, 100%, 27%);
}

.pairing-link:after {
  content: " \00BB";
}


/* Pre-footer */

.pre-footer {
    background: url(../img/pre-footer.svg) bottom center repeat-x transparent;
    background-size: auto 100%;
    margin-top: 40px;
    height: 236px;
}

/* Footer Section By Tony */

footer {
  display: block;
  padding: 40px 0 20px;
  background: hsl(210, 14%, 95%);
}

footer div {
  display: block;
}

footer h5 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.1;
  display: block;
  margin: 0;
}

footer ul {
  list-style: none;
  padding: 0;
  font-weight: 300;
  line-height: 1.2;
  box-sizing: border-box;
  margin: 0;
  display: block;
}

footer ul li {
  display: inline-block;
  width: calc(50% - 4px);
  margin-bottom: 20px;
}

footer ul li a {
  font-size: 1.125rem;
  font-weight: 400;
}

footer ul li:last-child {
  float: right;
  text-indent: -4px;
}

a {
  color: hsl(256, 100%, 66%);
  text-decoration: none;
  transition: color .3s;
}

a:hover {
  color: hsl(265, 100%, 27%);
}

.footer-left, .footer-middle, .footer-right {
  padding-right: 70px;
  width: 33.33%;
}

.footer-left {
  font-size: 1.125rem;
  color: hsl(265, 100%, 27%);
}

.footer-left input {
  display: block;
  width: 100%;
  font-size: 1.5rem;
  padding: 14px 10px 12px;
  margin: 20px 0;
  font-family: Bariol, Arial, sans-serif;
  border: none;
  border-radius: 5px;
}

.footer-left input[type="email"] {
  font-weight: 300;
  color: hsl(265, 100%, 27%) !important;
  background: hsl(0, 0%, 100%);
}

.footer-left input[type="email"]::placeholder,
.footer-left input[type="email"]:-ms-input-placeholder {
  font-weight: 300;
  color: hsl(265, 100%, 27%) !important;
}

.footer-left input[type="submit"] {
  font-weight: 600;
  text-align: center;
  color: hsl(0, 0%, 100%);
  cursor: pointer;
  background: hsl(256, 100%, 66%);
  transition: background-color .3s;
}

.footer-left input[type="submit"]:hover {
  background: hsl(265, 100%, 27%);
}

footer, footer button, footer input, footer select, footer textarea {
  color: hsl(265, 100%, 27%);
  font-size: 16px;
  line-height: 1.4;
}

.footer-container {
  padding-left:20px;
  padding-right:20px;
}

.footer-right > .social-media ul {
  display: flex;
  list-style: none;
  font-weight: 300;
  line-height: 1.2;
}

.footer-right > .social-media ul li{
  display: block;
  margin-right: 20px;
}

.footer-right .social-media a {
  display: block;
  width: 22px;
  height: 22px;
  color: hsl(256, 100%, 66%);
  text-decoration: none;
  -webkit-transition: color .3s;
  transition: color .3s;
}

.social-media svg {
  width: 100%;
  height: 100%;
  width: 22px;
  height: 22px;
  height: auto;
  max-width: 100%;
  vertical-align: top;
  overflow: hidden;
  transform-origin: 50% 50% 0;
}

.social-media svg path {
  transition: fill .3s;
  fill: hsl(256, 100%, 66%);
}

.social-media a:hover path {
  fill: hsl(265, 100%, 27%);
}

.footer-right .social-media a:hover {
  color: hsl(265, 100%, 27%);
}

.footer-right .copyright {
  font-size: 1.125rem;
  color: hsl(265, 100%, 27%);
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* min 880px */

@media (min-width: 880px) {

  footer, .footer-container {
    display: flex;
  }

  .footer-container {
    width: 100%;
    max-width: 1180px;
    margin: 0 auto;
  }

}

/* max 879px */

@media (max-width: 879px) {

  .logo {
	  padding: 40px 0;
  }

	.logo-item {
	  width: 50%;
  }

  .footer-left, .footer-middle, .footer-right {
    width: 100%;
    padding-right: 0;
    clear: both;
  }

}

